6-networking/network-policies/allow-ip-np.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-ip-policy
  namespace: other-ns
spec:
  podSelector:
    matchLabels:
      app: server
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - ipBlock:
        cidr: 172.16.96.174/32
    ports:
    - protocol: TCP
      port: 80
